[Flocking Simulation] Add: Alignment & Cohesion

--- a/Flocking Simulation/index.html
+++ b/Flocking Simulation/index.html
@@ -14,6 +14,7 @@
   <script src="..\Flocking Simulation\libraries\p5.js"></script>
   <script src="..\Flocking Simulation\libraries\p5.sound.js"></script>
   <script src="..\Flocking Simulation\sketch.js"></script>
+  <script src="..\Flocking Simulation\particle.js"></script>
 </head>
 
 <body>
